--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-spring.profiles.active=test
-spring.jpa.open-in-view=true
+spring.jpa.database=POSTGRESQL
+spring.datasource.plataform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/cofrinn
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
