alteracao de banco para realizar o deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.plataform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/cofrinn
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server:
+  port:8080
+error:
+  include-message: always
+#configuracao spring
+spring:
+datasource:
+  url:jdbc:postgresql://babar.db.elephantsql.com:5432/aosnuejy
+username: aosnuejy
+password: iF8C92Ev2ahsiUey3rgq_t9Ug13YysGm
+driverClassName: org.postgresql.Driver
+
