--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
-spring.profiles.active=test
-spring.jpa.open-in-view=true
+#spring.profiles.active=test
+#spring.jpa.open-in-view=true
+
+#spring.profiles.active=test
+#spring.jpa.open-in-view=true
+
+spring.datasource.url=jdbc:mysql://root:Pqz6FyW9yDvLdqv7Yl3X@containers-us-west-92.railway.app:7118/railway
+server.port=8090
+spring.datasource.username=root
+spring.datasource.password=Pqz6FyW9yDvLdqv7Yl3X
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
