--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@
 #spring.profiles.active=test
 #spring.jpa.open-in-view=true
 
-spring.datasource.url=jdbc:mysql://root:Pqz6FyW9yDvLdqv7Yl3X@containers-us-west-92.railway.app:7118/railway
+spring.datasource.url=jdbc:mysql://root:7BkkxCah8W0n1c1s0U8a@containers-us-west-141.railway.app:5775/railway
 server.port=8090
 spring.datasource.username=root
-spring.datasource.password=Pqz6FyW9yDvLdqv7Yl3X
+spring.datasource.password=7BkkxCah8W0n1c1s0U8a
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
